@@ -249,6 +249,7 @@ static ScanKeyword ScanKeywords[] = {
 		{"references", REFERENCES},
 		{"reindex", REINDEX},
 		{"relative", RELATIVE_P},
+		{"release", RELEASE},
 		{"rename", RENAME},
 		{"repeatable", REPEATABLE},
 		{"replace", REPLACE},
@@ -262,6 +263,7 @@ static ScanKeyword ScanKeywords[] = {
 		{"row", ROW},
 		{"rows", ROWS},
 		{"rule", RULE},
+		{"savepoint", SAVEPOINT},
 		{"schema", SCHEMA},
 		{"scroll", SCROLL},
 		{"second", SECOND_P},
